# iodd_parser_cpp

./: CMakeLists.txt  README.md  main.cpp
inc/: iodd_data_type.h  iodd_device_identity.h  iodd_helper.h  iodd_menu.h  iodd_parser.h  iodd_process_data.h  iodd_sensor.h  iodd_variable.h  types.h
ioddfiles/: AH002.xml  AL002.xml  AL007.xml  AP006.xml  AS001.xml  AT00x.xml  AU006.xml  BCM0002.xml  S15C-IU.xml  SA500.xml
src/: iodd_data_type.cpp  iodd_device_identity.cpp  iodd_menu.cpp  iodd_parser.cpp  iodd_process_data.cpp  iodd_sensor.cpp  iodd_variable.cpp
